@@ -48,8 +48,9 @@ extra_plugins:
 app_afkim:
 	cd $(PLUGINS_DIR)/APP_afkim/ && $(MAKE)
 	
-app_links2:
-	cd $(PLUGINS_DIR)/APP_Links2/links-2.1pre23/build-psp && $(MAKE) -f Makefile.psp.plugin prepare all install
+links2:
+	cd $(PLUGINS_DIR)/APP_Links2/links-2.1pre23/build-psp && $(MAKE) -f Makefile.psp.plugin prepare all install release
+	cd $(PLUGINS_DIR)/APP_Links2/links-2.1pre23/build-psp && $(MAKE) -f Makefile.psp.standalone all install release
 
 game_psptris:
 	cd $(PLUGINS_DIR)/GAME_PSPTris && $(MAKE) -f Makefile.plugin 
