@@ -1,5 +1,3 @@
-include ./Makefile
-
 TARGET = Links2PSPStandAlone
 EXTRA_TARGETS = EBOOT.PBP
 PSP_EBOOT_TITLE = Links2PSPStandAlone
@@ -7,21 +5,35 @@ PSP_EBOOT_TITLE = Links2PSPStandAlone
 BASE_DIR = ../../../..
 include $(BASE_DIR)/include.mak
 
-INCLUDES = -I./ -I$(PLUGINS_DIR) -I$(BASE_DIR) -I$(PSPRADIO_DIR) -I$(PSPRADIO_DIR)/ScreenHandler \
-		 -I$(SHAREDLIB_DIR)/PSPApp -L$(SHAREDLIB_DIR)/lib \
-		 -I$(SHAREDLIB_DIR)/libpspnet -I$(SHAREDLIB_DIR)/libiniparser \
-		 -I$(SHAREDLIB_DIR)/Tools -I$(SHAREDLIB_DIR)/Logging \
-		 -I$(SHAREDLIB_DIR)/libpthread \
-		 -I/usr/local/pspdev/psp/sdk/include/  -I/usr/local/pspdev/psp/include/ \
-		 -I/usr/local/pspdev/psp/include/SDL/ -I$(SHAREDLIB_DIR)/danzeff
+INCLUDES = -I./ -I../ -I$(PLUGINS_DIR) -I$(BASE_DIR) -I$(PSPRADIO_DIR) \
+			-I$(PSPRADIO_DIR)/ScreenHandler \
+			-I$(SHAREDLIB_DIR)/PSPApp -L$(SHAREDLIB_DIR)/lib \
+			-I$(SHAREDLIB_DIR)/libpspnet -I$(SHAREDLIB_DIR)/libiniparser \
+			-I$(SHAREDLIB_DIR)/Tools -I$(SHAREDLIB_DIR)/Logging \
+			-I$(SHAREDLIB_DIR)/libpthread \
+			-I/usr/local/pspdev/psp/sdk/include/  -I/usr/local/pspdev/psp/include/ \
+			-I/usr/local/pspdev/psp/include/SDL/ -I$(SHAREDLIB_DIR)/danzeff
 
-PSP_OBJECTS = psp.o Main_standalone.o $(COMMON_OBJS) $(EXPORTED_OBJS)
+links_OBJECTS =  ../af_unix.o ../auth.o ../beos.o ../bfu.o ../block.o ../bookmarks.o \
+../builtin.o ../cache.o ../charsets.o ../connect.o ../context.o ../cookies.o ../default.o \
+../dip.o ../directfb.o ../dither.o ../dns.o ../drivers.o ../error.o ../file.o ../finger.o \
+../font_include.o ../framebuffer.o ../ftp.o ../gif.o ../html.o ../html_gr.o ../html_r.o \
+../html_tbl.o ../http.o ../https.o ../img.o ../imgcache.o ../ipret.o ../javascr.o \
+../javascript.o ../jpeg.o ../jsint.o ../kbd.o ../language.o ../links_icon.o ../listedit.o \
+../lru.o ../mailto.o ../main.o ../md5.o ../md5hl.o ../menu.o ../memory.o ../ns.o ../objreq.o \
+../os_dep.o ../pmshell.o ../png.o ../pomocny.o ../regexp.o ../sched.o ../select.o ../session.o \
+../smb.o ../svgalib.o ../terminal.o ../tiff.o ../types.o ../url.o ../view.o ../view_gr.o \
+../win32.o ../x.o ../xbm.o ../psp.o ../pspsdl.o ../pspgu.o
+
+PSP_OBJECTS = Main_standalone.o $(COMMON_OBJS)
 
 OBJS = $(PSP_OBJECTS) $(links_OBJECTS)
 
 INCDIR =
 
-CFLAGS = -O2 -G0 -Wall $(INCLUDES)
+links_CFLAGS = -DHAVE_CONFIG_H
+
+CFLAGS = -O2 -G0 -Wall -DPSP $(GLOBAL_CFLAGS) $(links_CFLAGS) $(INCLUDES)
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 ASFLAGS = $(CFLAGS)
 
@@ -32,9 +44,6 @@ LDFLAGS =
 OPENSSL_LIBS= -lssl -lcrypto
 LIBS =   -ldanzeffvram -lpspgu -lpspge -lpng -ljpeg -lz -lm -lpspwlan -lpsphprm -lpsprtc -lpthread $(OPENSSL_LIBS)
 
-cleanpbp: 
-	rm -f EBOOT.PBP *.SFO *.elf
-
 PSPSDK=$(shell psp-config --pspsdk-path)
 include $(PSPSDK)/lib/build.mak
 
@@ -44,7 +53,7 @@ PSP_EBOOT_PIC1 = "$(BASE_DIR)/Resources/Links2_Icons_Argandona/pic1.png"
 prepare:
 	./update_svn_version.sh ..
 
-stand_alone: cleanpbp EBOOT.PBP
+all: EBOOT.PBP
 	mkdir -p "Links2"
 	mkdir -p "Links2/graphics/"
 	mkdir -p "Links2/.links/"
@@ -56,10 +65,12 @@ stand_alone: cleanpbp EBOOT.PBP
 	cp -vf whatsnew.txt "Links2"
 	cp -vf ../ChangeLog Links2/ChangeLog.orig
 	
-release_stand_alone:
-	make -f Makefile.psp.standalone prepare
-	make -f Makefile.psp.standalone stand_alone
-	./make_zip.sh stand_alone.zip Links2/
+cleanpbp: 
+	rm -Rf EBOOT.PBP *.SFO *.elf Links2
+
+release: EBOOT.PBP
+	./make_zip.sh stand_alone.zip Links2
+	mv *.zip $(RELEASE_DIR)
 	
 release_sources:
 	rm -Rf *.o
@@ -67,3 +78,5 @@ release_sources:
 	rm -Rf Links2/
 	./make_zip_non_recursive.sh sources.zip `find .. -name ".svn*" -prune -o -print`
 	
+install: EBOOT.PBP
+	cp -Rvf Links2 $(RELEASE_DIR)
