@@ -1,13 +1,15 @@
  What's New for Links2 PSP Port
 ================================
 
-links-2.1pre23 PSP rxxxx (2006-08-xx)
+links-2.1pre23 PSP r1258 (2007-02-05)
 NEW FEATURES
 (raf) Changed default background color from gray to white (for html).
 (raf) UP/DOWN in html now scroll up/down (without R+)
 (raf) UP/DOWN at the top/bottom of a menu list will wrap (user request).
 BUG FIXES
-(raf) Fixed openssl compile options (-mno-explicit-relocs), this fixes the problem where the Links2 plugin wasn't working. (You will need to upgrade openssl from the pspdev svn to rev.2169 or greater).
+(raf) Plugin: Fixed openssl compile options (-mno-explicit-relocs), this fixes the problem where the Links2 plugin wasn't working. (You will need to upgrade openssl from the pspdev svn to rev.2169 or greater).
+KNOWN PROBLEMS
+(raf) Plugin: Priorities have not been optimized, so the plugin runs slow if pspradio is playing music.
 
 links-2.1pre23 PSP r1231 (2006-08-09)
 NEW FEATURES
